--- a/package.json
+++ b/package.json
@@ -8,14 +8,27 @@
     "pkgbmp": "./src/index.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "deno lint --unstable"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/invisibleloop/pkgbmp"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "keywords": [
+    "clii",
+    "command-line",
+    "terminal",
+    "console"
+  ],
   "author": "Andy Stubbs",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "axios": "^1.4.0",
-    "chalk": "^5.2.0",
     "cli-table3": "^0.6.3",
     "commander": "^10.0.1",
     "fast-glob": "^3.2.12",
