--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkgbmp",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Check your package.json files for outdated packages and bump 'em up!",
   "type": "module",
   "main": "./src/index.js",
@@ -9,11 +9,12 @@
   },
   "scripts": {
     "test": "jest",
-    "lint": "deno lint --unstable"
+    "lint": "deno lint --unstable",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/invisibleloop/pkgbmp"
+    "url": "https://github.com/invisibleloop/pkgbmp"
   },
   "engines": {
     "node": ">=14.0.0",
@@ -40,6 +41,8 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "@babel/preset-env": "^7.21.5",
-    "jest": "^29.5.0"
+    "@semantic-release/changelog": "^6.0.3",
+    "jest": "^29.5.0",
+    "semantic-release": "^21.0.2"
   }
 }
