--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkgbmp",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "Check your package.json files for outdated packages and bump 'em up!",
   "type": "module",
   "main": "./src/index.js",
