--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    env:
+      ACTIONS_NODE_VERSION: 16
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
