--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,13 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Run release-please-action
+        uses: GoogleCloudPlatform/release-please-action@v2
         with:
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           release-type: node
