--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "@babel/preset-env": "^7.21.5",
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/release-notes-generator": "^11.0.1",
     "jest": "^29.5.0",
     "semantic-release": "^21.0.2"
   }
