--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
+          fetch-depth: 0
           node-version: 18.x
           registry-url: https://registry.npmjs.org/
 
