--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,5 @@
 {
+  "repositoryUrl": "https://github.com/invisibleloop/pkgbmp.git",
   "branches": [
     "main"
   ],
@@ -7,7 +8,12 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    "@semantic-release/git",
-    "@semantic-release/github"
+    "@semantic-release/github",
+    [
+      "@semantic-release/git",
+      {
+        "token": "${process.env.GITHUB_TOKEN}"
+      }
+    ]
   ]
 }
