--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/invisibleloop/pkgbmp"
+    "url": "https://github.com/invisibleloop/pkgbmp.git"
   },
   "engines": {
     "node": ">=18.13.0",
