--- a/.releaserc
+++ b/.releaserc
@@ -8,7 +8,20 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    "@semantic-release/git",
+    [
+      "@semantic-release/git",
+      {
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+        "assets": [
+          "CHANGELOG.md",
+          "package.json",
+          "package-lock.json"
+        ]
+      }
+    ],
     "@semantic-release/github"
-  ]
+  ],
+  "preset": "angular",
+  "ci": true,
+  "debug": true
 }
