--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,22 @@
-# name: Release Please
+name: Release Please
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   release-please:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: 16.x
+jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
 
-#       - name: Run release-please-action
-#         uses: GoogleCloudPlatform/release-please-action@v2
-#         with:
-#           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-#           release-type: node
-#           package-name: "Pkgbmp"
+      - name: Run release-please-action
+        uses: GoogleCloudPlatform/release-please-action@v2
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          release-type: node
+          package-name: "Pkgbmp"
